# BeanSense

./: .gitignore  AdaBoostClasifier.py  AdaBoostClassifier.py  AutoencoderLightGBM.py  CatBoostClassifier.py  ClassifierWrapper.py  CoffeeClassifierClient.py  CoffeeClassifierMain.py  CoffeeClassifierServer.py  Kopi -scale-RBF-GS-SVM.py  Kopi -scale-lightGBMv2-ResNet.py  LightGBMMobileNet.py  LightGBMResNet.py  MobileNetICCSLightGBM.py  MobileNetLightGBM.py  RBFSVMGridSearch.py  README.md  client.py  dataset6.csv  main.py  requirements.txt  server.py
.backup/: Kopi-Autoencoder+LGBM.py  package.xml
.backup/jetson/: CMakeLists.txt
.backup/jetson/launch/: kopi.launch
.backup/jetson/scripts/: Kopi -scale-MobileNet-ICCS-lightGBMv2.py  catboost_model.cbm  main.py  predict3.py  predict5.py
.backup/jetson/scripts/catboost_info/: learn_error.tsv
.backup/jetson/scripts/catboost_info/learn/: events.out.tfevents
.backup/jetson/scripts/dataset/: dataset8.csv
.backup/jetson/scripts/metode1/: predict1.py
.backup/jetson/src/: poweroff.cpp
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
datasets/: dataset4.csv  dataset6.csv  dataset8.csv
dendaFirmware/: RTOS.ino  database.ino  dendaFirmware.ino  display.ino  guiAddDataset.ino  guiEditDataset.ino  guiHome.ino  guiPredict.ino  sensor.ino
model/: Kopi -scale-AdaBosst-ResNet.py  Kopi -scale-CatBoost-ResNet.py  Kopi -scale-lightGBMv2-MobileNetV2.py  adaboost_resnet_model_4.pkl  adaboost_resnet_model_6.pkl  adaboost_resnet_model_8.pkl  catboost_resnet_model_4.pkl  catboost_resnet_model_6.pkl  (+13 more)
(+32 files in other folders)
